# MediaOrchard

./: .gitignore  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  README.zh-CN.md  RELEASE.md  RELEASE.zh-CN.md  config.example.yaml  findings.md  plan.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: release-check.yml
docs/: AGENT_INTEGRATION.zh-CN.md  QUALITY.md  README.md  RELEASE_CHECKLIST.md
mediaorchard/: __init__.py
mediaorchard/cli/: main.py  runtime.py
mediaorchard/controller/: __init__.py  main.py
mediaorchard/controller/db/: __init__.py  models.py  session.py
mediaorchard/controller/runtime/: __init__.py  state_machine.py
mediaorchard/controller/scheduler/: __init__.py  loop.py  policies.py  scoring.py
mediaorchard/shared/: __init__.py  enums.py  paths.py  security.py
mediaorchard/worker/: __init__.py  agent.py  bootstrap.py  executor.py  mock_pipeline.py  preflight.py  real_media_smoke.py
scripts/: check-harness.py  real_media_smoke.py  release_check.sh  release_env_check.sh  smoke.sh  verify.sh
tests/: test_api.py  test_cli.py  test_cli_runtime.py  test_db_persistence.py  test_mock_pipeline.py  test_paths.py  test_policy.py  test_real_media_smoke.py  test_release_metadata.py  test_scheduler.py  test_state_machine.py  test_tool_execution.py  test_worker_bootstrap.py  test_worker_lifecycle.py  test_worker_preflight.py
