[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "mediaorchard"
version = "0.1.0"
description = "Local multi-Mac media processing scheduler for ffmpeg and whisper workloads."
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-2-Clause"
authors = [
  { name = "MediaOrchard contributors" }
]
dependencies = [
  "fastapi>=0.115",
  "psutil>=6.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pyyaml>=6.0",
  "sqlmodel>=0.0.24",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  # Starlette 1.x TestClient imports httpx2; keep this until that test client contract changes.
  "httpx2>=2.5",
  "pytest>=8.3",
  "twine>=5.1",
]

[project.scripts]
mediaorchard = "mediaorchard.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["mediaorchard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
